package learningapp.entities.notification;

public enum NotificationType {
    INFO,
    WARN,
    ERROR,
    SUCCESS
}
