@startuml

title __NOTIFICATION's Class Diagram__\n

  namespace learningapp {
    namespace entities {
      namespace notification {
        class learningapp.entities.notification.Notification {
            - creationDate : LocalDateTime
            - message : String
            - notificationUsers : List<NotificationUser>
            + Notification()
            + Notification()
            {static} + builder()
            + getCreationDate()
            + getMessage()
            + getNotificationUsers()
            + getType()
            + setCreationDate()
            + setMessage()
            + setNotificationUsers()
            + setType()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace entities {
      namespace notification {
        class learningapp.entities.notification.Notification.NotificationBuilder {
            - creationDate : LocalDateTime
            - message : String
            - notificationUsers : List<NotificationUser>
            + build()
            + creationDate()
            + message()
            + notificationUsers()
            + toString()
            + type()
            ~ NotificationBuilder()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace entities {
      namespace notification {
        enum NotificationType {
          ERROR
          INFO
          SUCCESS
          WARN
        }
      }
    }
  }
  

  namespace learningapp {
    namespace entities {
      namespace notification {
        class learningapp.entities.notification.NotificationUser {
            - wasSeen : boolean
            + setNotification()
            + setNotificationUserId()
            + setUser()
            + setWasSeen()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace entities {
      namespace notification {
        class learningapp.entities.notification.NotificationUserId {
            - notificationId : UUID
            - userId : UUID
            + NotificationUserId()
            + NotificationUserId()
        }
      }
    }
  }
  

  learningapp.entities.notification.Notification -up-|> learningapp.entities.BaseEntity
  learningapp.entities.notification.Notification o-- learningapp.entities.notification.NotificationType : type
  learningapp.entities.notification.Notification +-down- learningapp.entities.notification.Notification.NotificationBuilder
  learningapp.entities.notification.Notification.NotificationBuilder o-- learningapp.entities.notification.NotificationType : type
  learningapp.entities.notification.NotificationUser o-- learningapp.entities.notification.Notification : notification
  learningapp.entities.notification.NotificationUser o-- learningapp.entities.notification.NotificationUserId : notificationUserId
  learningapp.entities.notification.NotificationUser o-- learningapp.entities.User : user
  learningapp.entities.notification.NotificationUserId .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
